feat: enhance journal management with new DTOs, exception handling, and role-based access